# contador

./: pyproject.toml
contador/: entities.py
contador/core/: accounting.py  entities.py  manager.py
scripts/: lint.sh
tests/: conftest.py  test_account_manager.py  test_entities.py
