[tool.poetry]
name = "contador"
version = "0.1.0"
description = ""
authors = ["Andres Javier Lopez <code@andresjavierlopez.com>"]
readme = "README.md"
packages = [{include = "contador"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# make it compatible with black
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=assistant"
testpaths = "assistant"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [ "assistant/tests/*" ]
